--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,8 +8,12 @@
   <div>
   <%= f.submit 'Update Book' %>
   </div>
-  <% end %>
+  <p>  <%= @book.errors.count %> errors prohibited this book from being saved:</p>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+<% end %>
 
-  <a class="show" href="/books/new">Show</a>
+  <%= link_to "show", book_path(@book)%>
   |
-  <a class="back" href="/books/new">back</a>
+  <%= link_to "Back", books_path%>
