--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,6 +30,16 @@
    <h2>New Books</h2>
 <!-- form_with部分 -->
 <%= form_with model: @book, url:'/books', local:true do |f| %>
+    <% if @book.errors.any? %>
+      <div id="error_explanation" class="alert alert-danger">
+        <ul>
+          <p>  <%= @book.errors.count %> errors prohibited this book from being saved:</p>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
   <h3>Title</h3>
   <%= f.text_field :title %>
   <h4>Body</h4>
