--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,6 +21,6 @@
 <div>
 <%= link_to "Edit", edit_book_path(@book)%>
 |
-<%= link_to "Back", books_path(@book)%></body>
+<%= link_to "Back", books_path%></body>
 </div>
 </html>
